working on distributed mapping

--- a/index.html
+++ b/index.html
@@ -1432,7 +1432,7 @@
 
 
 				<section data-background-image="figures/background/black_maroon.png" data-background-size="100% 100%" data-background-interactive>
-
+						<h4>Consensus in the maps of various robots</h4>
 					<div class="grid-container4">
 						<div class="item1"><img src="figures/TRO_2018/worlds/mycave.png" alt="Cave domain" title="Cave domain" height="100%" width="100%"></div>
 						<div class="item2"><img src="figures/TRO_2018/worlds/plain.png" alt="plain domain" title="plain domain" height="100%" width="100%"></div>
