--- a/index.html
+++ b/index.html
@@ -1388,6 +1388,15 @@
 				</section>
 
 
+				<!-- Simulation video -->
+				<section data-background-image="figures/background/black_maroon.png" data-background-size="100% 100%" data-background-interactive>
+					<h3>Simulation Video</h3>
+					<video width = "960px" height = "400px" controls>
+							<source src="videos/Simulation.mp4" type="video/mp4"/>
+					</video>	
+				</section>
+
+
 				<!-- Simulation Results -->
 				<!-- Maps -->
 				<section data-background-image="figures/background/black_maroon.png" data-background-size="100% 100%" data-background-interactive>
