a fast experiment video added

--- a/index.html
+++ b/index.html
@@ -1517,7 +1517,7 @@
 				<section data-background-image="figures/background/black_maroon.png" data-background-size="100% 100%">
 					<h3>Experiment Video</h3>
 					<video width = "960px" height = "400px" controls>
-							<source src="videos/cut.mp4" type="video/mp4"/>
+							<source src="videos/cut_sub.mp4" type="video/mp4"/>
 					</video>	
 				</section>
 
